--- a/Minor Project.ipynb
+++ b/Minor Project.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# loading the data from the csv file to a pandas dataframe\n",
-    "movies_data = pd.read_csv('movies.csv')"
+    "movies_data = pd.read_csv('Data/movies.csv')"
    ]
   },
   {
@@ -523,15 +523,7 @@
    "execution_count": 11,
    "id": "3424da24",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Enter your favourite movie name : Avangers\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# getting the movie name from the user\n",
     "\n",
@@ -540,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "68be12e3",
    "metadata": {},
    "outputs": [
@@ -561,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "475d5f50",
    "metadata": {},
    "outputs": [
@@ -582,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "0e10c61d",
    "metadata": {},
    "outputs": [
@@ -601,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "4b9fd01d",
    "metadata": {},
    "outputs": [
@@ -622,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "fd1dad07",
    "metadata": {},
    "outputs": [
@@ -643,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "83af572e",
    "metadata": {},
    "outputs": [
@@ -664,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f6372848",
    "metadata": {},
    "outputs": [
@@ -685,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "e263e4e4",
    "metadata": {},
    "outputs": [
@@ -752,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0c4426d2",
    "metadata": {},
    "outputs": [
@@ -839,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
